<resources>
    <string name="app_name" translatable="false">有思</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">邮箱</string>
    <string name="prompt_password" translatable="false">输入密码</string>
    <string name="action_sign_in" translatable="false">登录或注册</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_email">邮箱无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">账号为空</string>
    <string name="permission_rationale">"邮箱不完整"</string>
    <string name="app_name_ch">有思</string>
    <string name="nick_name">输入昵称</string>
    <string name="edit_nick_name">输入昵称</string>
    <string name="loading">请稍后...</string>
    <string name="no_net">网络不可用,请检查你的网络</string>
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="user_not_exit">用户不存在</string>
    <string name="password_errro">密码错误</string>
    <string name="login_sucess">登录成功</string>
    <string name="on_login">正在登录</string>
    <string name="error_server_msg">后台错误%1$s</string>
    <string name="main_page">发现</string>
    <string name="book_stock">书架</string>
    <string name="idea">想法</string>
    <string name="mine">我的</string>
    <string name="take_passages">摘录</string>
    <string name="empty_message">啥也没有</string>
    <string name="loading_message">请稍等...</string>
    <string name="error_message">发生了一些错误</string>

    <string name="empty_button">重试</string>
    <string name="loading_button">取消</string>
    <string name="error_button">重试</string>
    <string name="c6">点击完成表示同意&lt;font color=\"#ffa42f\">《得到使用协议》&lt;/font></string>
    <string name="cp">我的学习进度: &lt;font color=#ffa42f>%s%%&lt;/font></string>
    <string name="error_server">服务器发生故障</string>
    <string name="no_content">空空如也</string>
    <string name="check_detail">查看详情</string>
    <string name="daily_after_read_pression">读后感·%1$d篇，日志·%2$d篇</string>
    <string name="daily_mine">我的日志</string>
    <string name="read_pression_mine">我的读后感</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="write_daily">写日志</string>
    <string name="write_read_pression">写读后感</string>
    <string name="what_to_write">选择写什么</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="write_title">需要添加标题</string>
    <string name="write_content">请填写内容</string>
    <string name="book_name">书名</string>
    <string name="is_quit_edit">退出此次编辑？</string>
    <string name="content_wont_store">想法内容将不会被保存</string>
    <string name="quit">退出</string>
    <string name="continue_quit">继续编辑</string>
    <string name="avatar">头像</string>
    <string name="nickName">昵称</string>
    <string name="edit_nick">修改昵称</string>
    <string name="sex">性别</string>
    <string name="bio">个人简介</string>
    <string name="blog">我的主页链接</string>
    <string name="mine_infor">我的信息</string>
    <string name="cancel">取消</string>
    <string name="positive">确定</string>
    <string name="not_null">不能为空</string>
    <string name="edit_sucess">修改成功</string>
    <string name="edit_failed">修改失败</string>
    <string name="edit_avatar_sucess">头像修改成功</string>
    <string name="edit_avatar_failed">头像修改失败</string>
    <string name="man">男</string>
    <string name="female">女</string>
    <string name="agree">是</string>
    <string name="search">搜索</string>
    <string name="url">"http://116.196.109.167:8080/education/"</string>
    <string name="write_keys_words">输入关键词</string>
    <string name="search_record">热门搜索</string>
    <string name="gender">性别</string>
    <string name="personal_bio">个人简介</string>
    <string name="personal_blog">我的主页链接</string>
    <string name="on_loade">正在上传...</string>
    <string name="error_server_msg2">后台不可访问</string>
    <string name="record_track">记录轨迹</string>
    <string name="record_track_catch">轨迹追踪</string>

</resources>
