<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dialog_radius"
    app:contentPadding="@dimen/dialog_pading">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_title_size"
            tools:text="@string/is_quit_edit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="1" />

        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:minLines="3"
            android:textSize="@dimen/dialog_content_size"
            tools:text="@string/content_wont_store" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/dialog_quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toLeftOf="@+id/dialog_continue_edit"
                android:textColor="@color/blue"
                tools:text="@string/quit" />

            <TextView
                android:id="@+id/dialog_continue_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/blue"
                tools:text="@string/continue_quit" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>