<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/cardItem_padding"
                android:text="@string/edit_nick"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp">

            <EditText
                android:id="@+id/et_nick_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                tools:text="贾雨村" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blue"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:padding="@dimen/cardItem_padding">

                <TextView
                    android:id="@+id/tv_edit_nick_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dip"
                    android:textColor="@color/blue"
                    android:layout_toLeftOf="@+id/tv_edit_nick_positive"
                    android:text="@string/cancel" />

                <TextView
                    android:id="@+id/tv_edit_nick_positive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dip"
                    android:textColor="@color/blue"
                    android:text="@string/positive" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>